# PLENTICA

./: .gitignore  README.md  pyproject.toml
client/: .env  package-lock.json  package.json
client/src/: App.jsx
client/src/Components/: DashBoard.jsx  Footer.jsx  HowItWorks.jsx  LandingPage.jsx  LoggedLandingPage.jsx  Login.jsx  Navbar.jsx  SignUp.jsx
client/src/Components/Dashboard/: LeftDashBoard.jsx  MiddleDashBoard.jsx  RightDashBoard.jsx
client/src/Components/Dashboard/MiddleDashBoard/: Bottom.jsx  Middle.jsx  Top.jsx
client/src/Components/Dashboard/RightDashBoard/: RightBottom.jsx  RightMiddle.jsx  RightTop.jsx
client/src/Components/LandingPage/: HeroLanding.jsx  LandingPage2.jsx
client/src/hooks/: useAuth.js
client/src/utils/: api.js
plentica/: __init__.py  cli.py  crop_data.py  crop_recommender.py  irrigation_optimizer.py  models.py  optimizer.py  resource_allocator.py
plentica.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: .env  connectDb.js  package-lock.json  package.json  server.js
server/middlewares/: auth.js
server/models/: FarmPlan.js  User.js
server/routes/: authRoutes.js  getRoutes.js
server/services/: Gemini.js  JWT.js
tests/: test_crop_recommender.py  test_irrigation_optimizer.py  test_models.py  test_optimizer.py  test_resource_allocator.py
