[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plentica"
version = "0.1.0"
description = "Smart Farm Resource Optimization"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.scripts]
plentica = "plentica.cli:run"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
